# teste

./: poetry.toml  pyproject.toml  teste001.py
