[tool.poetry]
name = "tests-python"
version = "0.1.0"
description = ""
authors = ["HugoRodrigues01 <hugo999junha@gmail.com>"]
readme = "README.md"
packages = [{include = "tests_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
